Fase 1 (batch 1): bug di stabilità e perdita dati nell'uso normale
MediaPlayerController:
- i listener di progress/volume slider venivano riaggiunti ad ogni
  cambio brano invece che una sola volta nel costruttore, accumulandosi
- il listener di selezione multipla veniva registrato dentro la
  rowFactory (invocata da JavaFX per ogni riga renderizzata) invece che
  una volta per tabella
- il MediaPlayer precedente non veniva mai rilasciato (dispose()) ad
  ogni cambio brano, solo fermato
- aggiunto setOnError sul MediaPlayer: un file non riproducibile non
  blocca più la coda in silenzio
- separati playNextTrack() (rispetta il repeat-one a fine brano) da un
  nuovo advanceToNextTrack() (usato dal salto manuale ">>", che ora
  avanza sempre, e dall'errore di riproduzione): con replay attivo il
  tasto avanti restava bloccato sullo stesso brano
- menu contestuale: usava setOnMouseClicked + getSelectionModel()
  invece di setOnContextMenuRequested, quindi il click destro leggeva
  la selezione precedente invece di quella sotto al cursore
- drag & drop: corretto un off-by-one nel calcolo della posizione di
  destinazione (l'indice veniva letto dopo la remove, quando la lista
  si era già spostata), impedito il trascinamento fra tabelle diverse
  (un indice della tabella sorgente applicato alla tabella di
  destinazione), e sincronizzata la coda di riproduzione quando si
  riordina la tabella "Coda" (prima il riordino restava solo visuale)
- "Mostra percorso file": comando shell costruito per concatenazione
  di stringa, un nome file con `"`, `$( )` o `;` poteva iniettare
  comandi; ora passa gli argomenti separatamente via ProcessBuilder

TrackMetadataEditor (editor metadati multi-brano):
- getUnifiedValue() usa "*" come segnaposto quando i brani selezionati
  hanno valori diversi per un campo; se la checkbox del campo era
  spuntata ma il testo non veniva toccato, createNewTrackInstances()
  scriveva "*" come valore reale in libreria (bug di perdita dati
  silenziosa, v